k8s/laravel/01_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: laravel
  name: laravel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - image: devopsapril/app-laravel:v1
          name: app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
            requests:
              cpu: 100m
      restartPolicy: Always
status: {}
