k8s/laravel/02_svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: laravel
  name: laravel
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: laravel
